--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"private": true,
 	"scripts": {
-		"build": "turbo run build"
+		"build": "turbo run build",
+		"npm-publish": "pnpm publish  --access=public"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.26.1",
