--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - main
 
+concurrency: ${{ github.workflow }}-${{ github.ref }}
+
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
@@ -44,13 +46,11 @@ jobs:
       - name: Build packages
         run: pnpm run build
 
-      - name: Create changeset release
+      - name: Create changeset release and publish to npm
+        id: changesets
         uses: changesets/action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Publish to npm
-        run: pnpm publish -r --access=public
+        with:
+          publish: pnpm publish -r --access=public
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
