--- a/packages/fzf-node/package.json
+++ b/packages/fzf-node/package.json
@@ -1,6 +1,9 @@
 {
 	"name": "fzf-node",
 	"version": "0.1.0",
+	"publishConfig": {
+		"access": "public"
+	},
 	"description": "Node.js bindings for the golang fzf fuzzy finder",
 	"keywords": [
 		"fzf",
