--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,11 +46,25 @@ jobs:
       - name: Build packages
         run: pnpm run build
 
-      - name: Create changeset release and publish to npm
-        id: changesets
-        uses: changesets/action@v1
-        with:
-          publish: pnpm publish -r --access=public
+      - name: Setup .npmrc file
+        run: |
+          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+
+      - name: Install changesets CLI
+        run: pnpm add --global @changesets/cli
+
+      - name: Create changeset release
+        run: changeset version
+
+      - name: Publish packages to npm
+        run: pnpm publish -r --access=public
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Commit and push changes
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add .
+          git commit -m "Release: Apply changeset version updates and package.json changes [skip ci]" || true
+          git push
